--- a/Education.html
+++ b/Education.html
@@ -96,7 +96,7 @@
         <div class="timeline-dot"></div>
         <div class="timeline-content">
           <h3>Bachelor of Science in Information Technology – Major in Network and Security</h3>
-          <p>Saint Louis University · 2025 – Present</p>
+          <p>University of the Cordilleras · 2025 – Present</p>
           <p>Building knowledge in networking, cybersecurity, and programming, with focus on ethical hacking and network defense.</p>
         </div>
       </div>
