--- a/kazler_starter_pack.html
+++ b/kazler_starter_pack.html
@@ -57,7 +57,7 @@
     nav a:hover::after, nav a.active::after { transform: scaleX(1); }
     nav a.active { color: var(--accent-2); }
 
-    .hero { display: grid; grid-template-columns: 1fr 360px; gap: 70px; align-items: center; max-width: 1100px; margin: 80px auto; padding: 0 20px; position: relative; z-index: 1; }
+    .hero { display: grid; grid-template-columns: 1fr 360px; gap: 40px; align-items: center; justify-content: center; max-width: 1000px; margin: 40px auto; padding: 0 20px; position: relative; z-index: 1; }
     h1 { font-size: clamp(32px, 5vw, 52px); line-height: 1.2; color: var(--ink); margin: 0; }
     .kicker { color: var(--accent-2); font-weight: 600; margin-bottom: 8px; }
     .divider { height: 2px; width: 100%; background: linear-gradient(to right, var(--accent), var(--accent-2)); border: none; border-radius: 2px; margin: 20px 0; }
@@ -75,7 +75,9 @@
     footer { text-align: center; color: var(--muted); padding: 40px 0; border-top: 1px solid rgba(255,255,255,.06); }
 
     @media (max-width: 900px) { .hero { grid-template-columns: 1fr; text-align: center; } .card { margin: 0 auto; } }
-  </style>
+  .next-btn { display:inline-block; margin-top:20px; padding:14px 26px; background:linear-gradient(135deg, var(--accent), var(--accent-2)); color:#0b0e12; font-weight:700; text-decoration:none; border-radius:12px; font-size:16px; box-shadow:0 6px 20px rgba(0,0,0,0.4); transition:transform .25s ease; }
+.next-btn:hover{ transform:translateY(-3px); }
+</style>
 </head>
 <body>
   <header>
@@ -84,7 +86,7 @@
       <nav>
         <a href="#home" class="active">Home</a>
         <a href="Education.html">Education</a>
-        <a href="#contact">Contact</a>
+        <a href="Extra-Curricular.html">Extracurricular</a>
       </nav>
     </div>
   </header>
@@ -103,26 +105,13 @@
         <img src="kazler1.JPG" alt="Kazler Carl Flores Umaging">
       </div>
     </div>
-  </section>
 
-  <section id="skills">
-    <h2 class="section-title">Skills Overview</h2>
-    <div class="skills-grid">
-      <div class="skill-card">Networking Basics</div>
-      <div class="skill-card">Cybersecurity Fundamentals</div>
-      <div class="skill-card">Programming (Python, HTML, CSS)</div>
-      <div class="skill-card">Penetration Testing Tools</div>
-      <div class="skill-card">Team Collaboration & Research</div>
-    </div>
-  </section>
+      <a href="Education.html" class="next-btn" style="grid-column: 1 / -1; justify-self: center; text-align:center;">Next → Educational-Attainment</a>
+    </section>
 
-  <section id="contact">
-    <h2 class="section-title">Contact</h2>
-    <p style="text-align:center;">📍 Baguio City, Philippines</p>
-    <p style="text-align:center;">📞 <a href="tel:+639277954646" style="color:inherit; text-decoration:none;">0927 795 4646</a></p>
-    <p style="text-align:center;">📧 <a href="mailto:kazlercarl.umaging@gmail.com" style="color:inherit; text-decoration:none;">kazlercarl.umaging@gmail.com</a></p>
-    <p style="text-align:center;">🔗 <a href="YOUR_FACEBOOK_URL" target="_blank" style="color: var(--accent-2); text-decoration: none;">Facebook Profile</a></p>
-  </section>
+  
+
+  
 
   <footer>
     © <span id="year"></span> Kazler Carl Flores Umaging. All rights reserved.
