--- a/kazler_starter_pack.html
+++ b/kazler_starter_pack.html
@@ -6,7 +6,6 @@
   <title>Kazler Carl Flores Umaging – Portfolio</title>
   <meta name="description" content="Portfolio of Kazler Carl Flores Umaging, BSIT Network and Security student.">
   <meta name="theme-color" content="#0d1117">
-  <link rel="icon" type="image/png" href="assets/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -17,14 +16,19 @@
       --bg: #0b0e12;
     }
 
-    html { scroll-behavior: smooth; }
+    html { height:100%; }
+
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
       background: var(--bg);
       color: var(--ink);
+      height: 100vh;             /* lock to screen height */
+      overflow-y: hidden;        /* REMOVE SCROLLING */
       overflow-x: hidden;
       position: relative;
+      display: flex;
+      flex-direction: column;
     }
 
     @keyframes moveLights {
@@ -32,7 +36,13 @@
       50% { background-position: 58% 36%, 28% 80%; }
       100% { background-position: 20% 26%, 76% 68%; }
     }
-    body::before, body::after { content:""; position: fixed; inset: 0; pointer-events: none; z-index: 0; }
+    body::before, body::after {
+      content:"";
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      z-index: 0;
+    }
     body::before {
       background-image:
         radial-gradient(900px 700px at 22% 30%, rgba(124,156,255,0.16), rgba(124,156,255,0) 60%),
@@ -44,81 +54,163 @@
       mix-blend-mode: screen;
       opacity: 0.9;
     }
-    body::after { background: radial-gradient(ellipse at center, rgba(0,0,0,0) 55%, rgba(0,0,0,0.35) 80%, rgba(0,0,0,0.65) 100%); }
+    body::after {
+      background: radial-gradient(ellipse at center,
+        rgba(0,0,0,0) 55%,
+        rgba(0,0,0,0.35) 80%,
+        rgba(0,0,0,0.65) 100%);
+    }
 
-    header { background: rgba(12,14,18,0.9); border-bottom: 1px solid rgba(255,255,255,.05); backdrop-filter: blur(10px); position: sticky; top: 0; z-index: 10; }
-    .nav-container { display: flex; justify-content: space-between; align-items: center; max-width: 1100px; margin: 0 auto; padding: 14px 28px; }
-    .brand { display: flex; align-items: center; gap: 10px; font-weight: 700; font-size: 18px; }
-    .brand .logo { width: 34px; height: 34px; border-radius: 10px; background: linear-gradient(135deg,var(--accent),var(--accent-2)); box-shadow: 0 0 15px rgba(98,230,179,0.6); }
+    header {
+      background: rgba(12,14,18,0.9);
+      border-bottom: 1px solid rgba(255,255,255,.05);
+      backdrop-filter: blur(10px);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      padding: 10px 0;
+    }
+    .nav-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 22px;
+    }
+    .brand {
+      font-weight: 700;
+      font-size: 16px;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+    }
+    .logo {
+      width: 28px;
+      height: 28px;
+      border-radius: 8px;
+      background: linear-gradient(135deg,var(--accent),var(--accent-2));
+      box-shadow: 0 0 12px rgba(98,230,179,.6);
+    }
 
-    nav a { position: relative; color: var(--ink); text-decoration: none; font-weight: 600; margin-left: 18px; display: inline-block; transition: color .3s ease, transform .3s ease; }
-    nav a::after { content: ""; position: absolute; left: 0; bottom: -4px; width: 100%; height: 2px; background: linear-gradient(90deg, var(--accent), var(--accent-2)); transform: scaleX(0); transform-origin: left; transition: transform .3s ease; }
-    nav a:hover { transform: translateY(-2px); color: var(--accent-2); }
-    nav a:hover::after, nav a.active::after { transform: scaleX(1); }
+    nav a {
+      color: var(--ink);
+      text-decoration: none;
+      font-weight: 600;
+      margin-left: 14px;
+      font-size: 14px;
+      position: relative;
+    }
     nav a.active { color: var(--accent-2); }
 
-    .hero { display: grid; grid-template-columns: 1fr 360px; gap: 40px; align-items: center; justify-content: center; max-width: 1000px; margin: 40px auto; padding: 0 20px; position: relative; z-index: 1; }
-    h1 { font-size: clamp(32px, 5vw, 52px); line-height: 1.2; color: var(--ink); margin: 0; }
-    .kicker { color: var(--accent-2); font-weight: 600; margin-bottom: 8px; }
-    .divider { height: 2px; width: 100%; background: linear-gradient(to right, var(--accent), var(--accent-2)); border: none; border-radius: 2px; margin: 20px 0; }
-    .lede { color: var(--muted); line-height: 1.7; margin-bottom: 16px; }
+    .hero {
+      flex: 1;
+      display: grid;
+      grid-template-columns: 1.2fr 0.8fr;
+      max-width: 900px;
+      margin: 5px auto 0;
+      padding: 0 18px;
+      align-items: center;
+      gap: 20px;
+      position: relative;
+      z-index: 1;
+    }
 
-    .card { position:relative; background: linear-gradient(135deg, var(--accent), var(--accent-2)); border-radius: 16px; padding: 6px; width: 340px; height: 400px; display: flex; align-items: center; justify-content: center; box-shadow: 0 10px 30px rgba(0,0,0,0.6); }
-    .thumb { width: 100%; height: 100%; background: #0f1116; border-radius: 12px; overflow: hidden; }
-    .thumb img { width: 100%; height: 100%; object-fit: cover; border-radius: 12px; display:block; }
+    h1 {
+      font-size: 32px;
+      margin: 0;
+    }
+    .kicker {
+      color: var(--accent-2);
+      font-size: 14px;
+      margin-bottom: 4px;
+    }
+    .divider {
+      height: 2px;
+      background: linear-gradient(to right, var(--accent), var(--accent-2));
+      border: none;
+      border-radius: 2px;
+      margin: 10px 0;
+    }
+    .lede {
+      font-size: 14px;
+      line-height: 1.4;
+      margin-bottom: 8px;
+      color: var(--muted);
+    }
 
-    .section-title { text-align:center; color: var(--accent-2); font-size: 28px; margin: 60px 0 28px; }
-    .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 22px; max-width: 1100px; margin: 0 auto; padding: 0 20px; }
-    .skill-card { background: rgba(255,255,255,0.04); border: 1px solid rgba(255,255,255,0.08); border-radius: 14px; padding: 22px; text-align: center; transition: .3s ease; color: var(--ink); }
-    .skill-card:hover { background: rgba(255,255,255,0.08); transform: translateY(-5px); }
+    .card {
+      width: 260px;
+      height: 300px;
+      background: linear-gradient(135deg,var(--accent),var(--accent-2));
+      padding: 4px;
+      border-radius: 14px;
+      box-shadow:0 10px 25px rgba(0,0,0,.5);
+      justify-self:center;
+    }
+    .thumb {
+      width:100%; height:100%; border-radius:12px; overflow:hidden;
+    }
+    .thumb img { width:100%; height:100%; object-fit:cover; border-radius:12px; }
 
-    footer { text-align: center; color: var(--muted); padding: 40px 0; border-top: 1px solid rgba(255,255,255,.06); }
+    .next-btn {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 22px;
+      background: linear-gradient(135deg,var(--accent),var(--accent-2));
+      color: #0b0e12;
+      font-weight: 700;
+      border-radius: 10px;
+      text-decoration: none;
+      font-size: 14px;
+      box-shadow: 0 4px 14px rgba(0,0,0,.4);
+    }
 
-    @media (max-width: 900px) { .hero { grid-template-columns: 1fr; text-align: center; } .card { margin: 0 auto; } }
-  .next-btn { display:inline-block; margin-top:20px; padding:14px 26px; background:linear-gradient(135deg, var(--accent), var(--accent-2)); color:#0b0e12; font-weight:700; text-decoration:none; border-radius:12px; font-size:16px; box-shadow:0 6px 20px rgba(0,0,0,0.4); transition:transform .25s ease; }
-.next-btn:hover{ transform:translateY(-3px); }
-</style>
+    footer {
+      text-align: center;
+      padding: 6px 0;
+      font-size: 12px;
+      color: var(--muted);
+      border-top: 1px solid rgba(255,255,255,.06);
+    }
+
+    @media(max-width: 900px){
+      body { overflow-y: auto; height:auto; }
+      .hero { grid-template-columns:1fr; text-align:center; }
+      .card { margin:0 auto; }
+    }
+
+  </style>
 </head>
 <body>
   <header>
     <div class="nav-container">
       <div class="brand"><span class="logo"></span> Kazler Carl Flores Umaging</div>
       <nav>
-        <a href="#home" class="active">Home</a>
+        <a href="#" class="active">Home</a>
         <a href="Education.html">Education</a>
-        <a href="Extra-Curricular.html">Extracurricular</a>
+        <a href="Extra-Curricular.html">Extra-Curricular</a>
+        <a href="MyFamily.html">My Family</a>
+        <a href="MyBatchmates.html">My Batchmates</a>
       </nav>
     </div>
   </header>
 
-  <section id="home" class="hero">
+  <section class="hero">
     <div>
       <div class="kicker">BSIT – Network and Security</div>
-      <h1>Hi, I’m <span style="color: var(--accent);">Kazler Carl Flores Umaging</span></h1>
+      <h1>Hi, I'm <span style="color:var(--accent);">Kazler Carl Flores Umaging</span></h1>
       <hr class="divider">
-      <p class="lede">I’m a freshman Bachelor of Science in Information Technology student majoring in Network and Security. I graduated in 2025 from Saint Louis University Senior High School, Science, Technology, Engineering, and Mathematics (STEM) Strand, and have a growing passion for the field of Information Technology.</p>
-      <p class="lede">Aside from academics, I’m currently expanding my knowledge in cybersecurity and network systems. I aim to specialize in ethical hacking and network defense while continuously improving my programming skills and technical problem-solving abilities.</p>
-      <p class="lede">I’ve gained initial experience exploring <strong>Kali Linux</strong>, a penetration testing and security-focused operating system, which sparked my interest in cybersecurity. Currently, I’m focused on developing my skills and knowledge in networking, cybersecurity, and programming as I continue my studies.</p>
+      <p class="lede">I’m a freshman BSIT Network and Security student focusing on networking, cybersecurity, and programming.</p>
+      <p class="lede">I’m currently learning ethical hacking tools like <strong>Kali Linux</strong> and taking online cybersecurity courses to build my skills.</p>
+      <a href="Education.html" class="next-btn">Next → Educational-Attainment</a>
     </div>
+
     <div class="card">
-      <div class="thumb">
-        <img src="kazler1.JPG" alt="Kazler Carl Flores Umaging">
-      </div>
+      <div class="thumb"><img src="kazler1.JPG" alt="Kazler Profile Picture"></div>
     </div>
+  </section>
 
-      <a href="Education.html" class="next-btn" style="grid-column: 1 / -1; justify-self: center; text-align:center;">Next → Educational-Attainment</a>
-    </section>
-
-  
-
-  
-
-  <footer>
-    © <span id="year"></span> Kazler Carl Flores Umaging. All rights reserved.
-  </footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <footer>© 2025 Kazler Carl Flores Umaging</footer>
 </body>
 </html>
