--- a/Extra-Curricular.html
+++ b/Extra-Curricular.html
@@ -16,14 +16,22 @@
       --bg:#0b0e12;
     }
 
-    html { scroll-behavior:smooth; }
+    html {
+      height:100%;
+      scroll-behavior:smooth;
+    }
+
     body {
       margin:0;
       font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
       background:var(--bg);
       color:var(--ink);
       overflow-x:hidden;
+      overflow-y:hidden;      /* NO SCROLL ON DESKTOP */
       position:relative;
+      height:100vh;           /* lock to viewport */
+      display:flex;
+      flex-direction:column;
     }
 
     /* animated background */
@@ -60,7 +68,7 @@
     header {
       background:rgba(12,14,18,.9);
       border-bottom:1px solid rgba(255,255,255,.05);
-      padding:14px 28px;
+      padding:10px 20px;
       position:sticky;
       top:0;
       z-index:10;
@@ -70,10 +78,11 @@
       color:var(--ink);
       text-decoration:none;
       font-weight:600;
-      margin-right:18px;
+      margin-right:14px;
       position:relative;
       display:inline-block;
       transition:color .3s ease, transform .3s ease;
+      font-size:14px;
     }
     nav a.active{
       color:var(--accent-2);
@@ -82,32 +91,36 @@
     .hero {
       text-align:center;
       max-width:800px;
-      margin:48px auto 24px;
-      padding:0 20px;
+      margin:8px auto 0;
+      padding:0 16px;
       position:relative;
       z-index:1;
+      flex:1;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
     }
     h1 {
-      font-size:clamp(32px,6vw,48px);
-      margin-bottom:8px;
+      font-size:26px;
+      margin:6px 0 4px;
     }
     .subtitle {
       color:var(--muted);
-      font-size:14px;
-      margin-bottom:20px;
+      font-size:13px;
+      margin-bottom:8px;
     }
     .divider {
       height:2px;
-      width:60%;
-      margin:16px auto 0;
+      width:55%;
+      margin:6px auto 10px;
       background:linear-gradient(to right,var(--accent),var(--accent-2));
       border:none;
       border-radius:2px;
     }
 
     .entry {
-      margin:18px auto 0;
-      padding:14px 18px;
+      margin:6px auto 0;
+      padding:10px 12px;
       max-width:650px;
       background:rgba(15,17,22,0.9);
       border-radius:12px;
@@ -119,12 +132,12 @@
       cursor:default;
     }
     .logo-box {
-      width:52px;
-      height:52px;
+      width:48px;
+      height:48px;
       border-radius:12px;
       background:rgba(255,255,255,0.03);
       border:1px solid rgba(255,255,255,0.18);
-      margin-right:16px;
+      margin-right:12px;
       display:flex;
       align-items:center;
       justify-content:center;
@@ -142,102 +155,77 @@
       display:block;
     }
     .entry:hover {
-      transform:translateY(-4px);
-      box-shadow:0 10px 26px rgba(0,0,0,0.6);
+      transform:translateY(-3px);
+      box-shadow:0 8px 22px rgba(0,0,0,0.6);
       border-color:rgba(124,156,255,0.6);
     }
     .entry:hover .logo-box{
-      box-shadow:0 0 18px rgba(124,156,255,.7);
+      box-shadow:0 0 16px rgba(124,156,255,.7);
       border-color:rgba(124,156,255,.85);
-      transform:scale(1.05) rotate(3deg);
+      transform:scale(1.04) rotate(2deg);
     }
     .entry-text { text-align:left; }
     .title {
-      font-size:18px;
+      font-size:16px;
       font-weight:700;
       color:var(--accent-2);
-      margin-bottom:4px;
+      margin-bottom:2px;
     }
     .meta {
-      font-size:13px;
+      font-size:12px;
       color:var(--muted);
-      margin-bottom:4px;
+      margin-bottom:3px;
     }
     .desc {
-      font-size:14px;
+      font-size:13px;
       margin:0;
     }
 
-    .next {
+    .clickable-video {
+      cursor:pointer;
+    }
+
+    .btn-row {
+      margin-top:12px;
+      display:flex;
+      gap:10px;
+      justify-content:center;
+    }
+
+    .nav-btn {
       text-decoration:none;
       background:linear-gradient(135deg,var(--accent),var(--accent-2));
-      padding:14px 26px;
-      border-radius:12px;
+      padding:9px 20px;
+      border-radius:10px;
       color:#0b0e12;
       font-weight:700;
       display:inline-block;
-      margin-top:30px;
-      box-shadow:0 6px 20px rgba(0,0,0,.4);
-      transition:transform .25s ease, box-shadow .25s ease;
-    }
-    .next:hover {
-      transform:translateY(-3px);
-      box-shadow:0 10px 28px rgba(0,0,0,.6);
+      box-shadow:0 4px 14px rgba(0,0,0,.4);
+      font-size:14px;
     }
 
     footer {
       text-align:center;
       color:var(--muted);
-      margin:30px 0 20px;
-      font-size:13px;
+      margin:4px 0 4px;
+      font-size:11px;
+      padding:2px 0;
+      border-top:1px solid rgba(255,255,255,.06);
+      position:relative;
+      z-index:1;
     }
 
-    @media (max-width: 600px) {
-      header {
-        padding: 10px 18px;
-      }
-      nav a {
-        margin-right: 12px;
-        font-size: 13px;
+    /* allow scroll only on small screens */
+    @media (max-width: 900px) {
+      body {
+        height:auto;
+        overflow-y:auto;
       }
       .hero {
-        margin: 32px auto 18px;
-        padding: 0 16px;
-      }
-      h1 {
-        font-size: 26px;
-      }
-      .subtitle {
-        font-size: 13px;
+        margin-top:12px;
       }
       .entry {
-        max-width: 100%;
-        margin: 14px auto 0;
-        padding: 12px 14px;
-        flex-direction: row;
-        align-items: flex-start;
-      }
-      .logo-box {
-        width: 46px;
-        height: 46px;
-        margin-right: 10px;
-      }
-      .title {
-        font-size: 16px;
-      }
-      .meta {
-        font-size: 12px;
-      }
-      .desc {
-        font-size: 13px;
-      }
-      .next {
-        padding: 12px 22px;
-        font-size: 14px;
-      }
-      footer {
-        font-size: 12px;
-        margin: 22px 0 14px;
+        max-width:100%;
       }
     }
   </style>
@@ -248,6 +236,8 @@
       <a href="kazler_starter_pack.html">Home</a>
       <a href="Education.html">Education</a>
       <a href="#" class="active">Extra-Curricular</a>
+      <a href="MyFamily.html">My Family</a>
+      <a href="MyBatchmates.html">My Batchmates</a>
     </nav>
   </header>
 
@@ -308,7 +298,11 @@
       </div>
     </div>
 
-    <a class="next" href="kazler_starter_pack.html">Back to Home</a>
+    <!-- Previous / Next buttons -->
+    <div class="btn-row">
+      <a class="nav-btn" href="Education.html">← Previous</a>
+      <a class="nav-btn" href="MyFamily.html">Next → My Family</a>
+    </div>
   </section>
 
   <footer>© 2025 Kazler Carl Flores Umaging</footer>
