--- a/MyBatchmates.html
+++ b/MyBatchmates.html
@@ -136,7 +136,7 @@
 
   <div class="container">
     <h1>My Batchmates of 2025–2029</h1>
-    <p class="subtitle">My blockmates of College in the CICS department 1A as I.T. Specialists</p>
+    <p class="subtitle">My blockmates of College in the CITCS department 1A as I.T. Specialists</p>
 
     <div class="photo-box">
       <img src="Batch.png" alt="Batchmates Photo">
